--- a/src/css/Cards.css
+++ b/src/css/Cards.css
@@ -4,7 +4,20 @@
   width: 80vw;
 }
 
-.cards-container div {
+.cards-container img {
+  height: 80%;
+  width: 100%;
+}
+
+.carrousel {
+  align-items: center;
+  display: flex;
+  height: 500px;
+  overflow: auto;
+  width: 100vw;
+}
+
+.carrousel div, .carrousel a {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -12,7 +25,15 @@
   width: 300px;
 }
 
-.cards-container img {
-  height: 80%;
+.carrousel div img {
   width: 100%;
+
+}
+
+.cards-container div {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  width: 300px;
 }
